--- a/_posts/TryHackMe/Metasploit/2025-04-30-Blue.md
+++ b/_posts/TryHackMe/Metasploit/2025-04-30-Blue.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Blue"
 date: 2025-04-30 10:40:00 -0700
-categories: [TryHackMe, Exploits]
-tags: [THM, Exploits]
+categories: [TryHackMe, Exploits, Metasploit]
+tags: [THM, Exploits, Metasploit]
 description: TryHackMe Cyber Security 101 Metasploit
 ---
 
