--- a/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
+++ b/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
@@ -420,3 +420,125 @@ Be aware that this task has also implemented a randomised naming scheme for the 
 
 ### Challenge 
 
+![Desktop View](/assets/img/Upload_Vulnerabilities/56.png){: width="700" height="400" }
+
+After revieweing the site I tested `.jpg` and `.png` files. Those wokred however `.php` and other types of `.php` did not work. After some trial and error `.jpg.php5` worked.
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/58.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/57.png){: width="700" height="400" }
+
+We've already had a look at server-side extension filtering, but let's also take the opportunity to see how magic number checking could be implemented as a server-side filter.
+
+As mentioned previously, magic numbers are used as a more accurate identifier of files. The magic number of a file is a string of hex digits, and is always the very first thing in a file. Knowing this, it's possible to use magic numbers to validate file uploads, simply by reading those first few bytes and comparing them against either a whitelist or a blacklist. Bear in mind that this technique can be very effective against a PHP based webserver; however, it can sometimes fail against other types of webserver (hint hint).
+
+Let's take a look at an example. As per usual, we have an upload page:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/59.png){: width="700" height="400" }
+
+As expected, if we upload our standard shell.php file, we get an error; however, if we upload a JPEG, the website is fine with it. All running as per expected so far.
+
+From the previous attempt at an upload, we know that JPEG files are accepted, so let's try adding the JPEG magic number to the top of our `shell.php file`. A quick look at the [list of file signatures on Wikipedia](https://en.wikipedia.org/wiki/List_of_file_signatures) shows us that there are several possible magic numbers of JPEG files. It shouldn't matter which we use here, so let's just pick one (`FF D8 FF DB`). We could add the ASCII representation of these digits (ÿØÿÛ) directly to the top of the file but it's often easier to work directly with the hexadecimal representation, so let's cover that method.
+
+Before we get started, let's use the Linux `file` command to check the file type of our shell:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/60.png){: width="700" height="400" }
+
+As expected, the command tells us that the filetype is PHP. Keep this in mind as we proceed with the explanation.
+
+We can see that the magic number we've chosen is four bytes long, so let's open up the reverse shell script and add four random characters on the first line. These characters do not matter, so for this example we'll just use four "A"s:
+https://vnc.tryhackme.tech/index.html?host=proxy-10.tryhackme.tech&password=b1f4e01ed4d49589&proxyIP=10.10.113.38&resize=remote
+![Desktop View](/assets/img/Upload_Vulnerabilities/61.png){: width="700" height="400" }
+
+Save the file and exit. Next we're going to reopen the file in `hexeditor` (which comes by default on Kali), or any other tool which allows you to see and edit the shell as hex. In hexeditor the file looks like this:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/62.png){: width="700" height="400" }
+
+Note the four bytes in the red box: they are all `41`, which is the hex code for a capital "A" -- exactly what we added at the top of the file previously.
+
+Change this to the magic number we found earlier for JPEG files: `FF D8 FF DB`
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/63.png){: width="700" height="400" }
+
+Now if we save and exit the file (Ctrl + x), we can use `file` once again, and see that we have successfully spoofed the filetype of our shell:
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/64.png){: width="700" height="400" }
+
+Perfect. Now let's try uploading the modified shell and see if it bypasses the filter!
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/65.png){: width="700" height="400" }
+
+There we have it -- we bypassed the server-side magic number filter and received a reverse shell.
+
+Head to `magic.uploadvulns.thm` -- it's time for the last mini-challenge.
+
+This will be the final example website you have to hack before the challenge in task eleven; as such, we are once again stepping up the level of basic security. The website in the last task implemented an altered naming scheme, prepending the date and time of upload to the file name. This task will not do so to keep it relatively easy; however, directory indexing has been turned off, so you will not be able to navigate to the directory containing the uploads. Instead you will need to access the shell directly using its URI.
+
+Bypass the magic number filter to upload a shell. Find the location of the uploaded shell and activate it. Your flag is in `/var/www/`.
+
+### Challenge
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/66.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/66.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/67.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/68.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/69.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/70.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/71.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/72.png){: width="700" height="400" }
+
+---
+
+## Example Methodology
+
+We've seen various different types of filter now -- both client side and server side -- as well as the general methodology for file upload attacks. In the next task you're going to be given a black-box file upload challenge to complete, so let's take the opportunity to discuss an example methodology for approaching this kind of challenge in a little more depth. You may develop your own alternative to this method, however, if you're new to this kind of attack, you may find the following information useful.
+
+We'll look at this as a step-by-step process. Let's say that we've been given a website to perform a security audit on.
+
+1. The first thing we would do is take a look at the website as a whole. Using browser extensions such as the aforementioned Wappalyzer (or by hand) we would look for indicators of what languages and frameworks the web application might have been built with. Be aware that Wappalyzer is not always 100% accurate. A good start to enumerating this manually would be by making a request to the website and intercepting the response with Burpsuite. Headers such as `server` or `x-powered-by` can be used to gain information about the server. We would also be looking for vectors of attack, like, for example, an upload page.
+
+2. Having found an upload page, we would then aim to inspect it further. Looking at the source code for client-side scripts to determine if there are any client-side filters to bypass would be a good thing to start with, as this is completely in our control.
+
+3. We would then attempt a completely innocent file upload. From here we would look to see how our file is accessed. In other words, can we access it directly in an uploads folder? Is it embedded in a page somewhere? What's the naming scheme of the website? This is where tools such as Gobuster might come in if the location is not immediately obvious. This step is extremely important as it not only improves our knowledge of the virtual landscape we're attacking, it also gives us a baseline "accepted" file which we can base further testing on.
+
+- An important Gobuster switch here is the `-x` switch, which can be used to look for files with specific extensions. For example, if you added `-x php,txt,html` to your Gobuster command, the tool would append `.php`, `.txt`, and `.html` to each word in the selected wordlist, one at a time. This can be very useful if you've managed to upload a payload and the server is changing the name of uploaded files.
+
+4. Having ascertained how and where our uploaded files can be accessed, we would then attempt a malicious file upload, bypassing any client-side filters we found in step two. We would expect our upload to be stopped by a server side filter, but the error message that it gives us can be extremely useful in determining our next steps.
+Assuming that our malicious file upload has been stopped by the server, here are some ways to ascertain what kind of server-side filter may be in place:
+
+- If you can successfully upload a file with a totally invalid file extension (e.g. `testingimage.invalidfileextension`) then the chances are that the server is using an extension blacklist to filter out executable files. If this upload fails then any extension filter will be operating on a whitelist.
+
+- Try re-uploading your originally accepted innocent file, but this time change the magic number of the file to be something that you would expect to be filtered. If the upload fails then you know that the server 
+is using a magic number based filter.
+
+- As with the previous point, try to upload your innocent file, but intercept the request with Burpsuite and change the MIME type of the upload to something that you would expect to be filtered. If the upload fails then you know that the server is filtering based on MIME types.
+
+- Enumerating file length filters is a case of uploading a small file, then uploading progressively bigger files until you hit the filter. At that point you'll know what the acceptable limit is. If you're very lucky then the error message of original upload may outright tell you what the size limit is. Be aware that a small file length limit may prevent you from uploading the reverse shell we've been using so far.
+
+You should now be well equipped to take on the challenge in task eleven.
+
+---
+
+## Big Challenge
+
+Author's Note: After years of confusion, I have made the challenge optional. The following instructions still work, and the challenge is still available in the provided VM should you choose to attempt it.
+
+Be aware that the challenge is a big step up from the walkthrough content in the room, and contains a twist which you are very unlikely to see in the real world.
+
+It's challenge time!
+
+Head over to `jewel.uploadvulns.thm`.
+
+Take what you've learned in this room and use it to get a shell on this machine. As per usual, your flag is in `/var/www/`. Bear in mind that this challenge will be an accumulation of everything you've learnt so far, so there may be multiple filters to bypass. The attached wordlist might help. Also remember that not all webservers have a PHP backend...
+
+If you need a help, there are a series of hints [here](https://muirlandoracle.co.uk/2020/06/30/file-upload-vulnerabilities-hints/).
+
+Additionally, there is a full video walkthrough available for this challenge [here](https://youtu.be/8UPXibv_s1A).
+
