Finished Upload Vulnerabilities

--- a/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
+++ b/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
@@ -542,3 +542,54 @@ If you need a help, there are a series of hints [here](https://muirlandoracle.co
 
 Additionally, there is a full video walkthrough available for this challenge [here](https://youtu.be/8UPXibv_s1A).
 
+**Note**
+
+This one did take make me alot of trial and error. I had to use the hints video and guide and some online resources to figure it out and understand it.
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/73.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/74.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/75.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/76.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/77.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/78.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/79.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/80.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/81.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/82.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/83.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/84.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/85.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/86.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/87.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/88.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/89.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/90.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/91.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/92.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/93.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/94.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/95.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Upload_Vulnerabilities/96.png){: width="700" height="400" }
