--- a/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
+++ b/_posts/TryHackMe/Upload_Vulnerabilies/2025-06-26-UV.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Upload Vulnerabilities"
 date: 2025-06-26 10:15:00 -0700
-categories: [TryHackMe, Web Vulenrabilities, File Upload]
+categories: [TryHackMe, Web Security, File Upload]
 tags: [thm, upload vulnerabilities, file upload, web security, input validation]
 description: Learn about common file upload vulnerabilities in web applications, how attackers exploit them to execute malicious code or bypass restrictions, and how to prevent such attacks. Based on the TryHackMe Upload Vulnerabilities room.
 ---
